// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifyContent test render test hidden 1`] = `""`;

exports[`VerifyContent test render test render null with denied states 1`] = `""`;

exports[`VerifyContent test render test render null with denied states 2`] = `""`;

exports[`VerifyContent test render test render null with denied states 3`] = `""`;

exports[`VerifyContent test render test render null with denied states 4`] = `""`;

exports[`VerifyContent test render test render null with denied states 5`] = `""`;

exports[`VerifyContent test render test render null with denied states 6`] = `""`;

exports[`VerifyContent test render test render null with denied states 7`] = `""`;

exports[`VerifyContent test render test render null with denied states 8`] = `""`;

exports[`VerifyContent test render test render submitView if verifyAttr is set 1`] = `
<Component
  data-test="verify-contact-section"
  theme="theme"
>
  <Component
    data-test="verify-contact-header-section"
    theme="theme"
  >
    Account recovery requires verified contact information
  </Component>
  <Component
    data-test="verify-contact-body-section"
    theme="theme"
  >
    <div>
      <Component
        autoComplete="off"
        key="code"
        name="code"
        onChange={[Function]}
        placeholder="Code"
        theme="theme"
      />
    </div>
  </Component>
  <Component
    theme="theme"
  >
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-submit-button"
        onClick={[Function]}
        theme="theme"
      >
        Submit
      </Component>
    </Component>
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-skip-link"
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`VerifyContent test render test render verifyView with empty authData 1`] = `
<Component
  data-test="verify-contact-section"
  theme="theme"
>
  <Component
    data-test="verify-contact-header-section"
    theme="theme"
  >
    Account recovery requires verified contact information
  </Component>
  <Component
    data-test="verify-contact-body-section"
    theme="theme"
  />
  <Component
    theme="theme"
  >
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-verify-button"
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Component>
    </Component>
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-skip-link"
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`VerifyContent test render test render verifyView without phone_number and email 1`] = `
<Component
  data-test="verify-contact-section"
  theme="theme"
>
  <Component
    data-test="verify-contact-header-section"
    theme="theme"
  >
    Account recovery requires verified contact information
  </Component>
  <Component
    data-test="verify-contact-body-section"
    theme="theme"
  >
    <div />
  </Component>
  <Component
    theme="theme"
  >
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-verify-button"
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Component>
    </Component>
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-skip-link"
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`VerifyContent test render test render with accepted states 1`] = `
<Component
  data-test="verify-contact-section"
  theme="theme"
>
  <Component
    data-test="verify-contact-header-section"
    theme="theme"
  >
    Account recovery requires verified contact information
  </Component>
  <Component
    data-test="verify-contact-body-section"
    theme="theme"
  >
    <div>
      <Component
        key="email"
        name="contact"
        onChange={[Function]}
        placeholder="Email"
        theme="theme"
        value="email"
      />
      <Component
        key="phone_number"
        name="contact"
        onChange={[Function]}
        placeholder="Phone Number"
        theme="theme"
        value="phone_number"
      />
    </div>
  </Component>
  <Component
    theme="theme"
  >
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-verify-button"
        onClick={[Function]}
        theme="theme"
      >
        Verify
      </Component>
    </Component>
    <Component
      theme="theme"
    >
      <Component
        data-test="verify-contact-skip-link"
        onClick={[Function]}
        theme="theme"
      >
        Skip
      </Component>
    </Component>
  </Component>
</Component>
`;
